package ppl.delite.runtime.messages;

message DeliteMasterMessage {
  enum Type { OP = 1; DATA = 2; INFO = 3; DEBUG = 4; }

  required Type type = 1;

  optional RemoteOp op = 2;
  optional RequestData data = 3;
  optional CommInfo info = 4;
  optional DebugMessage debug = 5;
}

message DeliteSlaveMessage {
  enum Type { RESULT = 1; DATA = 2; DEBUG = 3; }

  required Type type = 1;

  optional ReturnResult result = 2;
  optional RequestData data = 3;
  optional DebugMessage debug = 4;
}

message RemoteOp {
  enum Type { INPUT = 1; MULTILOOP = 2; }

  required Id id = 1;
  required Type type = 2;
  repeated uint32 start_idx = 3;
  repeated bytes input = 4;
}

message ReturnResult {
  required Id id = 1;
  repeated bytes output = 2;
}

message RequestData {
  required Id id = 1;
  optional uint32 idx = 2;
}

message DebugMessage {
  required string message = 1;
}

message Id { //TODO: could just be an int
  required string id = 1;
}

message LaunchInfo {
  required string master_address = 1;
  required uint32 master_port = 2;
  required uint32 slave_idx = 3;
  repeated string arg = 4;
}

message CommInfo {
  required uint32 slave_idx = 1;
  repeated string slave_address = 2;
  repeated uint32 slave_port = 3;
}

//primitive type message wrappers

message IntMessage {
  required sint32 value = 1;
}

message LongMessage {
  required sint64 value = 1;
}

message DoubleMessage {
  required double value = 1;
}

message FloatMessage {
  required float value = 1;
}

message BooleanMessage {
  required bool value = 1;
}

message UIntMessage {
  required uint32 value = 1;
}

message StringMessage {
  required string value = 1;
}

message ArrayMessage {
  optional Id id = 1;
  optional uint32 length = 2;
  optional bytes array = 3;
  repeated uint32 offset = 4; 
  repeated bytes object = 5;
}
